assets/style.css
/* ... */
.descriptioncontainercard p::-webkit-scrollbar-thumb {
  background-color: #888888;
  height: -2px /* Color del cursor */
}
  .pricecard{
    width: 100%;
    padding: 2px;
    font-family: 'Raleway', sans-serif;
    border: none;
    border-radius: 4px;
    font-weight: 400;
    
    color: rgb(36, 35, 35);
    height: 30px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin-bottom: 10px;
    margin-top: -5px;
    font-size: 12px;
    padding: 10px;
   font-weight: 700;
    border: 1px solid rgb(199, 195, 195);
  }
.descriptioncontainercard button{
  width: 100%;
  padding: 5px;
  font-family: 'Raleway', sans-serif;
  border: none;
  border-radius: 4px;
  font-weight: 500;
  background-color: rgb(226, 37, 62);
  color: white;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  cursor: pointer;
}

.descriptioncontainercard button:hover{
 
  background-color: rgb(68, 68, 67);
  color: rgb(226, 37, 62); 
  font-weight: 800;


  
}



/* /////////////////////TERMINACARD////////////////////////*/







@media only screen and (max-width: 1100px) {
 
  .menumain {
  
    width: 65%;
  
  }
  .asidecontainer{
    width: 35%;
  
    
  }
  aside {
    width: 35%;
  
  }
}

@media only screen and (max-width: 750px) {
 

  .contmenu {
    height: fit-content;
    display: flex;  
    flex-direction: column;
  }

  .menumain {
  min-height: 100vh;
  width: 100%;
   
  
  }
  .asidecontainer{
    
    min-height: 20vh;
    width: 100%;
  
    
  }
  aside {

  min-height: 20vh;
  width: 100%;
  z-index: 100;
  
  }
}

aside h5{
  color: white;
  margin-left: 80px;
  font-size: 23px;
  font-weight: 700;  font-family: 'Nunito', sans-serif;
}

#searchbar1{
  border-radius: 8px;
  border: none;
  font-family: 'Nunito', sans-serif;
  padding: 7px;
  width: 245px;
  height: 30px;
  font-size: 12px;
  margin-left: 80px;
  
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  
}

@media only screen and (max-width: 1450px) {
 aside h5{
  font-size: 15px;
  margin-right: 10px;
 }
  #searchbar1{
    width: 180px;
    font-size: 12px;
    margin-right: 15px;
  }
  
}


.checkboxes{
  width: 300px;
  height: 50px;
  

;
display: flex;
flex-direction: row;
justify-content: center;
align-items: center;
margin-left: 110px;
flex-wrap: wrap;
align-content: center;

gap: 5px;
margin-bottom: 10px;

}


form{
  margin-left: 10px;
  width: 120px;

  display: flex;
  gap: 10px;
}

form label {
  font-family:  'Raleway', sans-serif;
  color: azure;
  font-size: 12px;
  font-weight: 600;
  
  font-family: 'Nunito', sans-serif;
}


input{
  accent-color: rgb(248, 246, 246);
}

.form-check-input:checked {
  background-color: rgb(65, 63, 63);
  border-color: transparent;
  cursor: pointer;
 
 
}
.form-check-input {
  background-color: #edf1f1;
  border-color: rgb(199, 192, 192);
 
  
  transition-duration: 430ms;
  cursor: pointer;
  
  
}

